crates/rulesteward-fapolicyd/tests/snapshots/version-target__e07-het-uid__rhel10.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E07] sev=Error line=6 col=7 span=325..331 :: set `%s` is type-incompatible with `uid=` (expects an unsigned integer) on --target rhel10 (fapolicyd 1.4.5)
