crates/rulesteward-fapolicyd/tests/snapshots/version-target__e07-het-uid__rhel9.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E07] sev=Error line=6 col=7 span=325..331 :: set `%s` is type-incompatible with `uid=` (expects an unsigned integer) on --target rhel9 (fapolicyd 1.4.3)
